# microservice-stock-ck

./: .env.example  .gitignore  .gitlab-ci.yml  100%成功率分笔数据获取策略.py  100%成功率分笔数据获取策略解析文档.md  60-triple-nic-config.yaml  AGENTS.md  README.md  SERVICE_REGISTRATION_INDEX.md  akshare_api.py  audit_intraday_accuracy.py  audit_noon_exact.py  benchmark_concurrency.py  benchmark_safe_delay.py  check_intraday.py  check_kline_today.py  check_mysql_count.py  check_redis_consistency.py  check_redis_stocks.py  check_remote_shards.py  check_run_status.py  check_shards.py  check_tasks.py  check_workflow_status.py  clean_redis.py  debug_failures.py  debug_tdx_ticks.py  deploy_remote_nodes.sh  diagnose_abnormal_stocks.py  diagnose_missing_shard.py  diagnose_prefix.py  diagnose_tick_coverage.py  diagnose_tick_coverage_nopandas.py  discover_servers.py  docker-compose.gsd.yml  docker-compose.infrastructure.yml  docker-compose.microservices.yml  docker-compose.node-111.yml  docker-compose.node-41.yml  docker-compose.node-58.yml  (+68 more)
libs/gsd-agent/: DESIGN.md  README.md  pyproject.toml  test_script.py  verify_siliconflow.py
libs/gsd-agent/src/gsd_agent/: __init__.py
libs/gsd-shared/: README.md  check_mysql_data.py  pyproject.toml
libs/gsd-shared/gsd_shared/: __init__.py  api_client.py  config_loader.py  exceptions.py  redis_protocol.py  repository.py  stock_universe.py  validators.py
libs/gsd-shared/gsd_shared/config/: universe.yaml
libs/gsd-shared/gsd_shared/models/: __init__.py  kline.py  stock.py  sync.py
libs/gsd-shared/gsd_shared/tick/: __init__.py  constants.py  deduplicator.py  fetcher.py  status.py  utils.py  writer.py
libs/gsd-shared/gsd_shared/utils/: calendar_service.py
libs/gsd-shared/gsd_shared/validation/: __init__.py  kline_validator.py  market_validator.py  result.py  snapshot_validator.py  standards.py  stock_list_validator.py  tick_validator.py
libs/gsd-shared/tests/: test_kline.py  test_redis_protocol.py  test_repository.py  test_tick.py  test_validation.py  test_validators.py
services/cci-monitor/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.dev.yml  entrypoint.sh  pyproject.toml  requirements.txt
services/cci-monitor/alembic/: env.py
services/cci-monitor/docs/: 00_Overview.md  01_Epic_0_Infrastructure.md  02_Epic_1_Data_Layer.md  03_Epic_2_Indicator_Engine.md  04_Epic_3_Layered_Monitoring.md  05_Epic_4_Backtest.md  06_Epic_5_Web_Dashboard.md  07_Epic_6_Scheduling.md  08_Epic_7_API_Layer.md  09_Milestones_and_Checklist.md  AGENT_PROMPTS.docx  AGENT_PROMPTS.md  CCI_Monitor_Epic_Stories.docx  CCI_Monitor_Epic_Stories.md  CCI_Monitor_Technical_Spec.docx  CCI_Monitor_Technical_Spec.md  README.md  主题发现.md
services/cci-monitor/docs/epics/: 01_Epic_1_Data_Layer_Refinement.md  02_Epic_2_Signal_Engine.md  03_Epic_3_Layered_Monitoring.md  04_Epic_4_API_and_Automation.md  05_Epic_5_Dashboard_and_Backtest.md
services/cci-monitor/scripts/: init_db.py  test_data.py
services/cci-monitor/src/: main.py
services/cci-monitor/src/api/: health_routes.py
services/cci-monitor/src/config/: constants.py  settings.py
services/cci-monitor/src/core/: database.py  exceptions.py  logger.py
services/cci-monitor/src/db/: models.py
services/gsd-api/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
services/gsd-api/docs/: SERVICE_SPEC.md  TECHNICAL_SPEC.md
services/gsd-api/src/: main.py  main_minimal.py
services/gsd-worker/: .env.example  Dockerfile  README.md  pyproject.toml  repair_shards.py  requirements.txt  setup_test_data.py  test_data_setup.sql  verify_adaptive_flow_real_db.py  verify_scheduler.py
services/gsd-worker/config/: hs300_stocks.yaml
services/gsd-worker/docs/: DAILY_STOCK_COLLECTION.md  HISTORICAL_TICK_COLLECTION.md  QC_REPORT_REFACTORING.md  REFACTORING_TICK_SYNC_SERVICE.md  SCENARIO_DAILY_TICK_SYNC.md  SCENARIO_SPECIFIED_DATE_TICK.md  SERVICE_SPEC.md  TECHNICAL_SPEC.md  TICK_ACQUISITION_STRATEGY_AND_CONCURRENCY.md  分笔数据采集策略与并发指南.md
services/gsd-worker/scripts/: setup_cloud_db.py
services/gsd-worker/src/: check_list_size.py  debug_stock.py  performance_benchmark.py  resilience_trigger.py  test_publish.py  test_timeout_verification.py  verify_baosteel.py  verify_redis_stocks.py
services/gsd-worker/tests/: test_adaptive_scheduler.py  test_kline_filtering.py  test_pre_market_gate.py  verify_repair_logic.py
services/quant-strategy/: .env.example  .gitignore  Dockerfile  Justfile  README.md  check_data_db.py  check_redis_features.py  check_snapshots.py  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  get_active_stocks.py  inspect_db.py  pyproject.toml  requirements.txt  test_get_stocks.py  test_universe_refresh.py  validate_api.py  verify_real_data.py  verify_universe_data.py
services/quant-strategy/config/: quant-strategy.yaml
services/quant-strategy/docs/: 1.md  CODING_STANDARDS.md  RULES_INDEX.md  SERVICE_SPEC.md  TASK_PROGRESS.md  antigravity_code_development_guide.md  git_diff_quality_report.md
services/quant-strategy/scripts/: run_geopolitical_refresh.py  run_geopolitical_refresh_offline.py  run_selection.py  sync_futures_data.py  test_database_comprehensive.py
services/quant-strategy/src/: compute_real_features.py  debug_scoring.py  diagnostic_features.py  init_services_example.py  main.py  test_dao_alignment.py  verify_ai_analysis.py  verify_real_features.py
services/quant-strategy/tests/: conftest.py  test_base_strategy.py  test_blacklist_pool.py  test_candidate_pool.py  test_candidate_service_altdata.py  test_config.py  test_database.py  test_eco_signal_strategy.py  test_epic005_integration.py  test_full_gsf_flow_688802.py  test_fundamental_filter_integration.py  test_health.py  test_nacos.py  test_position_pool.py  test_registry_concurrency.py  test_scanner_engine.py  test_signal.py  test_stock_data_provider.py  test_strategy_registry_concurrency.py  test_swing_pool.py  test_universe_pool.py  verify_epic002_apis.py  verify_epic005_apis.py  verify_real_data_manual.py
services/quant-strategy/unit_tests/: test_looper.py  test_strategy_registry.py
(+1922 files in other folders)
