[project]
name = "cci-monitor"
version = "0.1.0"
description = "Microservice for Critical Slowing Down (CSD) Market Monitoring"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "sqlalchemy>=2.0.0",
    "aiomysql>=0.2.0",
    "cryptography>=42.0.0",
    "alembic>=1.13.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    "apscheduler>=3.10.0",
    "loguru>=0.7.0",
    "tenacity>=8.2.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pandas.*", "numpy.*", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --cov=src --cov-report=term-missing --asyncio-mode=auto"
testpaths = ["tests"]
pythonpath = [".", "src"]
