[project]
name = "gsd-api"
version = "0.1.0"
description = "股票数据查询服务"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "aiohttp>=3.9.1",
    "httpx>=0.25.2",
    "pandas>=2.1.3",
    "redis>=5.0.1",
    "clickhouse-driver>=0.2.6",
    "asynch>=0.2.3",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
