[project]
name = "gsd-worker"
version = "0.1.0"
description = "股票数据处理任务执行器"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5.0",
    "aiomysql>=0.2.0",
    "asynch>=0.2.3",
    "redis>=5.0.1",
    "pandas>=2.1.3",
    "tenacity>=8.2.3",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
