[project]
name = "quant-strategy"
version = "0.1.0"
description = "Microservice for quantitative trading strategies and backtesting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "redis>=5.0.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pandas-stubs>=2.2.0",
    "types-redis>=4.6.0",
    "types-aiofiles>=23.2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ==============================================================================
# 1. Ruff Configuration (Code Style & Quality) - 替代 pylint, isort
# ==============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (basic error checking)
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (common bug patterns)
    "C4",  # flake8-comprehensions (list comprehension optimization)
    "UP",  # pyupgrade (modern python syntax)
    "N",   # pep8-naming (naming conventions)
    "SIM", # flake8-simplify (code simplification)
]
ignore = [
    "E501", # Line too long (handled by formatter, but allowed occasionally)
    "B008", # Do not perform function call in argument defaults (FastAPI Depends needs this)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ==============================================================================
# 2. Mypy Configuration (Static Type Checking) - 强类型约束
# ==============================================================================
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true       # 禁止无类型提示的定义 (Critical)
disallow_incomplete_defs = true    # 禁止不完整的类型定义
check_untyped_defs = true          # 检查无类型函数的内部
disallow_untyped_decorators = false # 允许无类型的装饰器 (FastAPI needs this often)
no_implicit_optional = true        # 禁止隐式 Optional
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "scipy.*",
    "talib.*"
]
ignore_missing_imports = true      # 忽略某些没有 stubs 的库

# ==============================================================================
# 3. Pytest Configuration (Testing) - 统一测试行为
# ==============================================================================
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --cov=src --cov-report=term-missing --asyncio-mode=auto"
testpaths = [
    "tests",
]
python_files = "test_*.py"
pythonpath = [
    ".",
    "src",
]
markers = [
    "unit: pure unit tests",
    "integration: integration tests needing DB/Redis",
    "slow: slow running tests",
    "concurrency: concurrency/threading tests"
]
log_cli = true
log_cli_level = "INFO"
